@@ -30,6 +30,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
+        <configuration>
+          <argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
       <!-- TODO: uncomment-->
       <!--<plugin>-->
@@ -91,9 +94,18 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
-      <scope>test</scope>
+      <artifactId>mockito-core</artifactId>
+      <version>2.23.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito2</artifactId>
+      <version>2.0.0-beta.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>2.0.0-beta.5</version>
     </dependency>
   </dependencies>
 </project>
